syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";

service SecurityLoginsRole{
	rpc ReadSecurityLoginsRole (SecurityLoginsRoleIdRequest) returns (SecurityLoginsRolePayload);
	//rpc GetAllSecurityLoginsRole (google.protobuf.Empty) returns (SecurityLoginsRolePayload);
	rpc CreateSecurityLoginsRole (SecurityLoginsRolePayload) returns (google.protobuf.Empty);
	rpc UpdateSecurityLoginsRole (SecurityLoginsRolePayload) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsRole (SecurityLoginsRolePayload) returns (google.protobuf.Empty);
}

message SecurityLoginsRoleIdRequest{
	string Id =1;
}

message SecurityLoginsRolePayload {
	string Id = 1;
	string Login = 2;
	string Role = 3;
}